Rename IGeneratedCode to IGeneratedQueryCode.cs to indicate this is really just an interface for a single query.

--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -79,7 +79,7 @@
     <Compile Include="IBookingStatementBlock.cs" />
     <Compile Include="ICodeContext.cs" />
     <Compile Include="IExpressionHolder.cs" />
-    <Compile Include="IGeneratedCode.cs" />
+    <Compile Include="IGeneratedQueryCode.cs" />
     <Compile Include="IQueryResultCache.cs" />
     <Compile Include="IQVCollectionResultOperator.cs" />
     <Compile Include="IQVScalarResultOperator.cs" />
