Splitting the Genrated code up, and improved the way I generate GeneratedCode for Pex. The upshot was a lot of tests started to fail (Ops!). So I had to do a bunch of updates. And the new factory showed some weaknesses in my tests too!

--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -78,6 +78,7 @@
     <Compile Include="IArrayInfo.cs" />
     <Compile Include="IBookingStatementBlock.cs" />
     <Compile Include="ICodeContext.cs" />
+    <Compile Include="IExecutableCode.cs" />
     <Compile Include="IExpressionHolder.cs" />
     <Compile Include="IGeneratedQueryCode.cs" />
     <Compile Include="IQueryResultCache.cs" />
