First infrastructure for the future result operators. At the moment this is just test harness - nothing is up and running quite yet.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -214,6 +214,7 @@
     <Compile Include="FileUtilsTest.WriteTextIfNotDuplicate.g.cs">
       <DependentUpon>FileUtilsTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="FutureResultOperatorsTest.cs" />
     <Compile Include="GeneratedCodeTest.Add.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
     </Compile>
