Added some basic tracing to the library. We will obviously develop this more over time!

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Statements\StatementInlineBlock.cs" />
     <Compile Include="Statements\StatementSimpleStatement.cs" />
     <Compile Include="Expressions\TranslatingExpressionVisitor.cs" />
+    <Compile Include="TraceHelpers.cs" />
     <Compile Include="TTreeQueryExecutor.cs" />
     <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCall.cs" />
     <Compile Include="TypeHandlers\ROOT\ROOTObjectCopiedValue.cs" />
