--- a/LINQToTTreeHelpers/LINQToTreeHelpers/packages.config
+++ b/LINQToTTreeHelpers/LINQToTreeHelpers/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Sprache" version="1.9.1.31" />
+  <package id="DoddleReport" version="1.0.0" />
 </packages>
