Doodle report, used by the sparse table stuff, needs to be included! Bummer! B/C there isn't a good one up on nuget.

--- a/LINQToTTreeHelpers/CopyToLINQDirectories/Makefile
+++ b/LINQToTTreeHelpers/CopyToLINQDirectories/Makefile
@@ -4,10 +4,10 @@
 
 LIB=$(SolutionDir)LINQToTreeHelpers\bin\$(Configuration)
 
-filelist = $(LIB)\LINQToTreeHelpers.dll $(LIB)\LINQToTreeHelpers.xml $(LIB)\LINQToTreeHelpers.pdb $(LIB)\Sprache.dll
+filelist = $(LIB)\LINQToTreeHelpers.dll $(LIB)\LINQToTreeHelpers.xml $(LIB)\LINQToTreeHelpers.pdb $(LIB)\Sprache.dll $(LIB)\Doddle.Reporting.dll $(LIB)\Doddle.Reporting.pdb
 
 libDir = $(ROOTSYS)\NETWrappers\LINQ\lib
-destList = $(libDir)\LINQToTreeHelpers.dll $(libDir)\LINQToTreeHelpers.xml $(libDir)\LINQToTreeHelpers.pdb $(libDir)\Sprache.dll
+destList = $(libDir)\LINQToTreeHelpers.dll $(libDir)\LINQToTreeHelpers.xml $(libDir)\LINQToTreeHelpers.pdb $(libDir)\Sprache.dll $(libDir)\Doddle.Reporting.dll $(libDir)\Doddle.Reporting.pdb
 
 #
 # Do the default building
