--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Expressions\TranslatingExpressionVisitor.cs" />
     <Compile Include="TraceHelpers.cs" />
     <Compile Include="TTreeQueryExecutor.cs" />
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCode.cs" />
     <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCall.cs" />
     <Compile Include="TypeHandlers\ROOT\ROOTObjectCopiedValue.cs" />
     <Compile Include="TypeHandlers\ROOT\TypeHandlerROOT.cs" />
