Pex-ified the recent routines, and added some protections as well.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -373,7 +373,19 @@
     <Compile Include="TypeHandlerHelpersTest.ProcessMethodCall.g.cs">
       <DependentUpon>TypeHandlerHelpersTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCodeTest.CanHandle.g.cs">
+      <DependentUpon>TypeHandlerCPPCodeTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCodeTest.cs" />
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCodeTest.ProcessConstantReference.g.cs">
+      <DependentUpon>TypeHandlerCPPCodeTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCodeTest.ProcessMethodCall.g.cs">
+      <DependentUpon>TypeHandlerCPPCodeTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCodeTest.ProcessNew.g.cs">
+      <DependentUpon>TypeHandlerCPPCodeTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCallTest.CanHandle.g.cs">
       <DependentUpon>TypeHandlerReplacementCallTest.cs</DependentUpon>
     </Compile>
