--- a/LINQToTTree/TTreeParser/TTreeParser.csproj
+++ b/LINQToTTree/TTreeParser/TTreeParser.csproj
@@ -79,6 +79,7 @@
     <Compile Include="ParseTFile.cs" />
     <Compile Include="ParseTTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleLogging.cs" />
     <Compile Include="TemplateParser.cs" />
     <Compile Include="TypeDefTranslator.cs" />
     <Compile Include="Utils.cs" />
