First go at getting the Min/Max operators working... Not totally working, however first setup is going.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -297,6 +297,13 @@
     <Compile Include="ResultOperators\ROFirstLastTest.ProcessResultOperator.g.cs">
       <DependentUpon>ROFirstLastTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="ResultOperators\ROMinMaxTest.CanHandle.g.cs">
+      <DependentUpon>ROMinMaxTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ResultOperators\ROMinMaxTest.cs" />
+    <Compile Include="ResultOperators\ROMinMaxTest.ProcessResultOperator.g.cs">
+      <DependentUpon>ROMinMaxTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="ResultOperators\TakeSkipOperatorsTest.CanHandle.g.cs">
       <DependentUpon>TakeSkipOperatorsTest.cs</DependentUpon>
     </Compile>
