--- a/LINQToTTree/TTreeClassGenerator/TTreeClassGenerator.csproj
+++ b/LINQToTTree/TTreeClassGenerator/TTreeClassGenerator.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="ClassGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TTreeDataModel\TTreeDataModel.csproj">
