--- a/DemosAndTests/DemoFutures/DemoFutures.csproj
+++ b/DemosAndTests/DemoFutures/DemoFutures.csproj
@@ -73,7 +73,9 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(ROOTSYS)\NETWrappers\LINQ\build\LINQTargets.targets" />
   <ItemGroup>
-    <TTreeGroupSpec Include="CollectionTreeConfig-000.ntup" />
+    <TTreeGroupSpec Include="CollectionTreeConfig-000.ntup">
+      <SubType>Designer</SubType>
+    </TTreeGroupSpec>
     <ROOTFileDataModel Include="hvsample.ntupom" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
