Properly release ownership for objects we attach to TDirectories. For now this is ugly - to be revisited when w emove to a newer version of ROOT.NET that has the SetOwner option on it.

--- a/LINQToTTreeHelpers/LINQToTreeHelpers/LINQToTreeHelpers.csproj
+++ b/LINQToTTreeHelpers/LINQToTreeHelpers/LINQToTreeHelpers.csproj
@@ -89,6 +89,7 @@
     <Compile Include="SparseTables\SparseTableHelpers.cs" />
     <Compile Include="SparseTables\SparseTableReportSource.cs" />
     <Compile Include="StackedPlot.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
