--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -110,8 +110,11 @@
     <Compile Include="ResultOperators\ROCount.cs" />
     <Compile Include="ResultOperators\ROFirstLast.cs" />
     <Compile Include="ResultOperators\ROMinMax.cs" />
+    <Compile Include="ResultOperators\ROPairWiseAll.cs" />
     <Compile Include="ResultOperators\ROTakeSkipOperators.cs" />
     <Compile Include="ResultOperators\ROUniqueCombinations.cs" />
+    <Compile Include="Statements\StatementCheckPairwise.cs" />
+    <Compile Include="Statements\StatementLoopOverGood.cs" />
     <Compile Include="Variables\VarArray.cs" />
     <Compile Include="Statements\StatementPairLoop.cs" />
     <Compile Include="Statements\StatementRecordIndicies.cs" />
